--- a/Lab1-2/Q4.html
+++ b/Lab1-2/Q4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="4-CSS.css">
+<link rel="stylesheet" type="text/css" href="Q4.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
