--- a/Lab1-2/Q1.html
+++ b/Lab1-2/Q1.html
@@ -1,3 +1,8 @@
+<!--Abdulellah Hakim
+D12122837
+Rich Web Lab 1-2
+Page fragment Task-Q01 -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,13 +37,5 @@
     </article>
   </div>
 
-
-<script id="jsbin-source-css" type="text/css">#hello {
-  font-family: "Verdana";
-}
-
-#intro {
-  font-size: 12px;
-}</script>
 </body>
 </html>
